--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    //gson
     implementation 'com.google.code.gson:gson:2.8.6'
+    //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //design support
     implementation 'com.google.android.material:material:1.0.0'
 }
