--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //design support
     implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 }
